# Jester

./: .gitignore  Cargo.toml  LICENSE  NOTICE.txt  config-sample.yml  readme.md
.github/workflows/: mirror.yml
jester_core/: Cargo.toml
jester_core/src/: errors.rs  lib.rs
migrations/: 001_initial.sql
src/: deep_lynx.rs  errors.rs  main.rs  plugin.rs  templates.rs
