[package]
name = "jester"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"]}
serde_yaml = "0.9"
tokio = { version = "1", features = ["full", "io-util", "fs"] }
rustc_version = "0.4.0"
jester_core = { path = "./jester_core"}
libloading = "0.7.4"
futures = "0.3.25"
glob = "0.3.1"
thiserror = "1.0.38"
include_dir = "0.7.3"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "sqlite", "migrate"] }
adler = "1.0.2"
log = {version = "0.4.17", features = ["max_level_trace", "release_max_level_warn"] }
chrono = "0.4.23"
warp = "0.3.3"
handlebars = "4.3.6"
serde_json = "1.0.91"
json = "0.12.4"
ureq = {version = "2.6.2", features = ["json"] }
jwt = "0.16.0"
new_mime_guess = "4.0.1"
multipart = "0.18.0"
fern = "0.6.1"

[workspace]
members = ['jester_core']
