[package]
name = "jester_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
rustc_version = "0.4.0"

[dependencies]
tokio = { version = "1", features = ["full", "io-util", "fs"] }
thiserror = "1.0.38"